stubbed in some of the pages for juxta visualization. added new model and database changes to dashboard db to track which page results have jx visualizations available

--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -11,18 +11,18 @@ emop:
 
 development:
   adapter: mysql2
-  database: emop_dashboard
+  database: dashboard_dev
   username: root
   password: 
 
 test:
   adapter: mysql2
-  database: emop_dashboard
+  database: dashboard_dev
   username: root
   password: 
 
 production:
   adapter: mysql2
-  database: emop_dashboard
+  database: dashboard_prod
   username: root
   password: 
