Add exception notification.

--- a/config/secrets.example.yml
+++ b/config/secrets.example.yml
@@ -14,6 +14,34 @@ default: &default
   secret_key_base: some-long-list-of-numbers
 
   ##########################
+  ### EMAIL
+  ##########################
+
+  # For getting automatic emails when an error occurs
+  # exception_recipients: List of all emails that should receive the notification
+  # sender_address: Who the notification email will be from
+  # email_prefix: What each email should be prefixed with
+  exception_notifier:
+    exception_recipients: [ "developer@email.com" ]
+    sender_address: '"Emop Dashboard" <info@nines.org>'
+    email_prefix: "[Emop Dashboard] "
+
+  admin:
+    email: info@nines.org
+
+  # For setting up email - this example uses sendgrid
+  smtp_settings:
+    address: "smtp.sendgrid.net"
+    port: 587
+    user_name: 'account-holder-username'
+    domain: 'sendgrid.net'
+    password: 'super-secret'
+    authentication: :plain
+    return_path: http://example.com
+    enable_starttls_auto: false
+    xsmtpapi: 'dashboard'
+
+  ##########################
   ### EMOP
   ##########################
   juxta_ws_url: http://127.0.0.1:8182/juxta
