* Remove index API subtotal item as made no sense, total returns number of records for the request * The per_page metadata value will be equal to total if less than per_page default is returned * Change job_queue API that used "status" param to "job_status" so easier to query against in Rails * Add the reserve action, this reserves pages to be run on cluster - resolves #3 * Fix issue in dashboard related to adding associations * Add validation to JobStatus to ensure name is unique * Update Capistrano deployment to v3

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 
 config/database.yml
 config/secrets.yml
+config/deploy/*/config/database.yml
+config/deploy/*/config/secrets.yml
 
 # Ignore locations resulting from tests
 coverage/*
