* Rename the example database and secrets to be consistent with default naming used by Rails * Change API job_status params to job_status_id to match changes to database * Massive overhaul of database to remove need on external database and use only the Rails managed database ** This includes updating column and table references in the controllers * Update associations * Move the defaults set previously in MySQL to be set using after_initialize in Rails * Setup JobType, OcrEngine and JobStatus using seed data

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,10 @@
 /tmp
 
 config/database.yml
+config/database_legacy.yml
 config/secrets.yml
 config/deploy/*/config/database.yml
+config/deploy/*/config/database_legacy.yml
 config/deploy/*/config/secrets.yml
 
 # Ignore locations resulting from tests
