--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
 before_script:
   - cp config/database.yml.example config/database.yml
   - cp config/secrets.yml.example config/secrets.yml
+  - bundle exec rake db:create
   - bundle exec rake db:migrate
 script:
   - RAILS_ENV=test bundle exec rake spec
