Rename external script example config.ini to config.ini.example

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ config/secrets.yml
 config/deploy/*/config/database.yml
 config/deploy/*/config/database_legacy.yml
 config/deploy/*/config/secrets.yml
+ext/scripts/config.ini
 
 # Ignore locations resulting from tests
 coverage/*
