--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,8 +2,14 @@ AllCops:
   RunRailsCops: true
 Metrics/AbcSize:
   Enabled: false #TODO
+Metrics/ClassLength:
+  Enabled: false #TODO
+Metrics/CyclomaticComplexity:
+  Enabled: false #TODO!
 Metrics/MethodLength:
   Enabled: false #TODO?
+Metrics/PerceivedComplexity:
+  Enabled: false #TODO!
 Metrics/LineLength:
   Max: 120
 Style/Documentation:
