--- a/config/deploy/firstbooks_production/config/secrets.yml.example
+++ b/config/deploy/firstbooks_production/config/secrets.yml.example
@@ -13,6 +13,8 @@
 default: &default
   secret_key_base: CHANGEME
 
+  project: 'FirstBooks'
+
   ##########################
   ### EMAIL
   ##########################
