Add path to fonts table Allow pages to be added to existing batch jobs - this required enabling twitter bootstrap across entire application

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -49,6 +49,7 @@ default: &default
   juxta_ws_pass: super-secret
   emop_path_prefix: /path/to/emop-controller
   emop_font_dir: /path/to/emop-controller/data/fonts
+  font_suffix: '.traineddata'
   juxta_expire_hrs: 1
 
 development:
