Add LanguageModel which can be associated to a BatchJob

--- a/config/deploy/firstbooks_dev/config/secrets.yml.example
+++ b/config/deploy/firstbooks_dev/config/secrets.yml.example
@@ -46,7 +46,9 @@ default: &default
   juxta_ws_user: juxta
   juxta_ws_pass: CHANGEME
   emop_path_prefix: /
-  emop_font_dir: /data/shared/tessdata
+  emop_font_dir: /data/primeros_libros/fonts
+  font_suffix: '.fontser'
+  language_model_path: /data/primeros_libros/language_models
   juxta_expire_hrs: 8
 
 development:
