--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -50,6 +50,7 @@ default: &default
   emop_path_prefix: /path/to/emop-controller
   emop_font_dir: /path/to/emop-controller/data/fonts
   font_suffix: '.traineddata'
+  language_model_path: '/path/to/language_models'
   juxta_expire_hrs: 1
 
 development:
