Add GlyphSubstitutionModel model Associate a GlyphSubstitutionModel to BatchJob Rename font_training_results path to font_path and add language_model_path and glyph_substitution_model_path attributes Rework job queue reserve API to put in font_training_results paths - in case of an Ocular transcription

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -51,6 +51,7 @@ default: &default
   emop_font_dir: /path/to/emop-controller/data/fonts
   font_suffix: '.traineddata'
   language_model_path: '/path/to/language_models'
+  gsm_path: '/path/to/gsm'
   juxta_expire_hrs: 1
 
 development:
